productcss.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: -1;
    background-image: url(https://lvesthetics.ca/wp-content/uploads/2018/09/marble-background-countertop-classic-kitchen.jpg);
    background-size: cover;
}

body {
    background-color: #eee;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

#page-wrapper {
    position: relative;
}

a {
    color: #000;
    text-decoration: none;
}

header {
    position: fixed;
    top: 0;
    min-height: 75px;
    padding: 0px 20px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-image: url(https://lvesthetics.ca/wp-content/uploads/2018/09/marble-background-countertop-classic-kitchen.jpg);
    background-size: cover;
}

.logo {
    width: 60vw;
}

.logo>span {
    display: inline-block;
    vertical-align: middle;
    font-size: 2em;
    font-weight: bolder;
}

.multicolortext {
    background-image: linear-gradient(to left, violet, indigo, blue, green, orange, red);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
}

.logo>img {
    width: 100%;
    height: 100%;
    max-width: 85px;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-left: 20px;
    display: inline-block;
    vertical-align: middle;
}

nav {
    font-weight: 400;
}

nav>ul {
    width: 35vw;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

li {
    list-style: none;
}

.container {
    max-width: 1000px;
    width: 100%;
    margin: 0 auto;
}

#hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    height: 200px;
    margin-top: 50px;
}

#hero>h2 {
    margin-bottom: 20px;
    word-wrap: break-word;
}

#hero input[type="email"] {
    max-width: 275px;
    width: 100%;
    padding: 5px;
}

#hero input[type="submit"] {
    max-width: 150px;
    width: 100%;
    height: 30px;
    margin: 15px 0;
    border: 0;
    background-color: #f1c40f;
}

.btn {
    padding: 0 20px;
    height: 40px;
    font-size: 1em;
    font-weight: 900;
    text-transform: uppercase;
    border: 3px black solid;
    border-radius: 2px;
    background: transparent;
    cursor: pointer;
}

#features {
    margin-top: 30px;
}

#how-it-works {
    margin-top: 50px;
    display: flex;
    justify-content: center;
}

#how-it-works>iframe {
    max-width: 560px;
    width: 100%;
}

#pricing {
    margin-top: 60px;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.grid {
    display: flex;
}

#features .icon {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 125px;
    width: 20vw;
    color: darkorange;
}

#features .desc {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 125px;
    width: 80vw;
    padding: 5px;
}

.product {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: calc(100% / 3);
    margin: 10px;
    border: 1px solid black;
    border-radius: 3px;
}

.product>.level {
    background-color: #ddd;
    color: black;
    padding: 15px 0;
    width: 100%;
    text-transform: uppercase;
    font-weight: 700;
}

.product>h2 {
    margin-top: 15px;
}

.product>ol {
    margin: 15px 0;
}

.product>ol>li {
    padding: 5px 0;
}

.product>button:hover {
    background-color: orange;
    transition: background-color 1s;
}

.product>button {
    border: 0;
    margin: 15px 0;
    background-color: #f1c40f;
    font-weight: 400;
}

footer {
    margin-top: 30px;
    background-color: #ddd;
    padding: 20px;
}

footer>ul {
    display: flex;
    justify-content: flex-end;
}

footer>ul>li {
    padding: 0 10px;
}

footer>span {
    margin-top: 5px;
    display: flex;
    justify-content: flex-end;
    font-size: 0.9em;
    color: #444;
}

@media screen and (max-width:600px) {
    .nav-bar {
        float: none;
        width: 100%;
    }
}

